[package]
name = "namada-chain-check"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.40.0", default-features = false, features = ["tendermint-rpc", "std", "async-send", "download-params", "rand"] }
tendermint-config = "0.36.0"
tendermint-rpc = { version = "0.36.0", features = ["http-client"]}
tokio = {version = "1.8.2", default-features = false}
tempfile = "3.10.1"
async-trait = "0.1.74"
reqwest = "0.11.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
antithesis_sdk = "0.2.1"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
