[package]
name = "namada-chain-check"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v1.1.1", default-features = false, features = ["std", "async-send", "download-params"] }
tendermint-rpc = {version = "0.40.1", features = ["http-client"]}
tendermint-config = "0.40.1"
tokio = {version = "1.8.2", default-features = false}
tempfile = "3.10.1"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
antithesis_sdk = "0.2.1"
chrono = "0.4.38"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
