[package]
name = "namada-chain-check"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antithesis_sdk = "0.2.1"
async-trait = "0.1.74"
chrono = "0.4.38"
clap = { version = "4.4.2", features = ["derive", "env"] }
futures = "0.3.30"
namada_sdk = { version = "0.47.1", default-features = false, features = ["std", "async-send", "download-params"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.1"
tendermint-config = "0.40.1"
tendermint-rpc = {version = "0.40.1", features = ["http-client"]}
tokio = {version = "1.8.2", default-features = false}
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
