[package]
name = "namada-chain-workload"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.45.1", default-features = false, features = ["std", "async-send", "download-params"] }
namada_wallet = { git = "https://github.com/anoma/namada", tag = "v0.45.1", default-features = false, features = ["std"] }
tendermint-config = "0.38.0"
tendermint-rpc = { version = "0.38.0", features = ["http-client"]}
tokio = {version = "1.8.2", default-features = false}
async-trait = "0.1.74"
reqwest = "0.11.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
futures = "0.3.30"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
antithesis_sdk = "0.2.1"
chrono = "0.4.38"
rand = {version = "0.8.5", default-features = false}
thiserror = "1.0.63"
tryhard = "0.5.1"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
fs2 = "0.4.3"
rlimit = "0.10.2"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
