[package]
name = "namada-chain-workload"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antithesis_sdk = "0.2.5"
async-trait = "0.1.74"
chrono = "0.4.38"
clap = { version = "4.4.2", features = ["derive", "env"] }
fs2 = "0.4.3"
futures = "0.3.30"
namada_sdk = { version = "0.47.1", default-features = false, features = ["std", "async-send", "download-params"] }
namada_wallet = { version = "0.47.1", default-features = false, features = ["std"] }
rand = {version = "0.8.5", default-features = false}
rand_chacha = { version = "0.3.1", features = ["serde1"] }
reqwest = "0.11.22"
rlimit = "0.10.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
tendermint-config = "0.40.1"
tendermint-rpc = {version = "0.40.1", features = ["http-client"]}
thiserror = "1.0.63"
tokio = {version = "1.8.2", default-features = false}
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tryhard = "0.5.1"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
