[package]
name = "namada-chain-workload"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antithesis_sdk = "0.2.5"
bip32 = "0.5.3"
chrono = "0.4.38"
clap = { version = "4.4.2", features = ["derive", "env"] }
cosmrs = { version = "0.22.0", features = ["rpc"] }
enum_dispatch = "0.3.13"
fs2 = "0.4.3"
futures = "0.3.30"
ibc-proto = "0.52.0"
namada_sdk = { version = "0.149.1", default-features = false, features = ["std", "async-send", "download-params"] }
namada_wallet = { version = "0.149.1", default-features = false, features = ["std"] }
rand = {version = "0.8.5", default-features = false}
rand_chacha = { version = "0.3.1", features = ["serde1"] }
reqwest = "0.12.12"
rlimit = "0.10.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
tendermint = "0.40.3"
tendermint-rpc = {version = "0.40.3", features = ["http-client"]}
thiserror = "1.0.63"
tokio = {version = "1.8.2", default-features = false}
toml = "0.8.20"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tryhard = "0.5.1"
typed-builder = "0.20.0"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
